the build works on hampi

--- a/docs/source/intro_notebook.ipynb
+++ b/docs/source/intro_notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "writing some markdown"
+    "# Biggest title of all time   "
    ]
   },
   {
