--- a/docs/source/intro_notebook.ipynb
+++ b/docs/source/intro_notebook.ipynb
@@ -13,8 +13,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy "
+    "import numpy \n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=numpy.linspace(0,2*numpy.pi,100)\n",
+    "y=numpy.sin(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,axis=plt.subplots(1,1)\n",
+    "axis.plot(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -24,7 +52,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.10"
   }
  },
