adding the milkway!

--- a/tests/scrap.ipynb
+++ b/tests/scrap.ipynb
@@ -2,86 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yaml \n",
-    "import astropy.constants as const"
+    "import tstrippy\n",
+    "import h5py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/scratch2/sferrone/simulations/MonteCarloObservables/Pal5-observables.hdf5'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from pathlib import Path\n"
+    "path_to_init_conds = \"/scratch2/sferrone/simulations/MonteCarloObservables/Pal5-observables.hdf5\"\n",
+    "path_to_init_conds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<KeysViewHDF5 ['monte-carlo-000', 'monte-carlo-001', 'monte-carlo-002', 'monte-carlo-003', 'monte-carlo-004', 'monte-carlo-005', 'monte-carlo-006', 'monte-carlo-007', 'monte-carlo-008', 'monte-carlo-009', 'monte-carlo-010', 'monte-carlo-011', 'monte-carlo-012', 'monte-carlo-013', 'monte-carlo-014', 'monte-carlo-015', 'monte-carlo-016', 'monte-carlo-017', 'monte-carlo-018', 'monte-carlo-019', 'monte-carlo-020', 'monte-carlo-021', 'monte-carlo-022', 'monte-carlo-023', 'monte-carlo-024', 'monte-carlo-025', 'monte-carlo-026', 'monte-carlo-027', 'monte-carlo-028', 'monte-carlo-029', 'monte-carlo-030', 'monte-carlo-031', 'monte-carlo-032', 'monte-carlo-033', 'monte-carlo-034', 'monte-carlo-035', 'monte-carlo-036', 'monte-carlo-037', 'monte-carlo-038', 'monte-carlo-039', 'monte-carlo-040', 'monte-carlo-041', 'monte-carlo-042', 'monte-carlo-043', 'monte-carlo-044', 'monte-carlo-045', 'monte-carlo-046', 'monte-carlo-047', 'monte-carlo-048', 'monte-carlo-049']>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "path_to_file=Path(\"../tstrippy/data/unit_basis.yaml\")\n",
-    "with open(path_to_file, 'r') as basis:\n",
-    "    try:\n",
-    "        unitbasis = yaml.safe_load(basis)\n",
-    "    except yaml.YAMLError as exc:\n",
-    "        print(exc)\n",
-    "G=const.G.to(unitbasis['G']).value"
+    "myinit_conds=h5py.File(path_to_init_conds, 'r')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.121"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
-    "data_file_path = Path('../tstrippy/data/pouliasis2017pii.yaml')\n",
-    "with open(data_file_path, 'r') as file:\n",
-    "    try:\n",
-    "        data = yaml.safe_load(file)\n",
-    "    except yaml.YAMLError as exc:\n",
-    "        print(exc)"
+    "myinit_conds['monte-carlo-000']['DEC'][0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "myparams= []\n",
-    "myparams.append(G)\n",
-    "myparams.append(data['components'][0][\"parameters\"]['M'])\n",
-    "myparams.append(data['components'][0][\"parameters\"]['a'])\n",
-    "myparams.append(data['components'][0][\"parameters\"]['exp'])\n",
-    "myparams.append(data['components'][0][\"parameters\"]['cutoffradius'])\n",
-    "myparams.append(data['components'][1][\"parameters\"]['M'])\n",
-    "myparams.append(data['components'][1][\"parameters\"]['a'])\n",
-    "myparams.append(data['components'][1][\"parameters\"]['b'])\n",
-    "myparams.append(data['components'][2][\"parameters\"]['M'])\n",
-    "myparams.append(data['components'][2][\"parameters\"]['a'])\n",
-    "myparams.append(data['components'][2][\"parameters\"]['b'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
