this notebook shouldn't be on here

--- a/tests/scrap.ipynb
+++ b/tests/scrap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,18 +15,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GCname              = \"Pal5\"\n",
+    "GCname              =   \"Pal5\"\n",
     "path_to_init_conds  =   \"/scratch2/sferrone/simulations/MonteCarloObservables/\"+GCname+\"-observables.hdf5\"\n",
     "myinit_conds        =   h5py.File(path_to_init_conds, 'r')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<KeysViewHDF5 ['DEC', 'Mass', 'RA', 'RV', 'Rsun', 'mu_delta', 'mualpha', 'rh_m']>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myinit_conds['monte-carlo-000'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,26 +168,6 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 500001)"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xt.shape"
    ]
   },
   {
