trying to compile on execution

--- a/docs/source/galactic_orbits.ipynb
+++ b/docs/source/galactic_orbits.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,12 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# give each object a color \n",
     "import matplotlib.cm as cm\n",
+    "plt.rcParams.update({\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"serif\",\n",
+    "    \"font.serif\": [\"Computer Modern Roman\"],\n",
+    "})\n",
     "colors = cm.rainbow(np.linspace(0, 1, Nobj))\n",
     "AXIS = {\"xlabel\":\"X [kpc]\",\"ylabel\":\"Y [kpc]\",\"zlabel\":\"Z [kpc]\",\"aspect\":\"equal\",}"
    ]
@@ -193,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig=plt.figure()\n",
+    "fig=plt.figure(figsize=(6,6))\n",
     "axis=fig.add_subplot(111,projection='3d')\n",
     "for i in range(Nobj):\n",
     "    axis.plot(xt[i],yt[i],zt[i],color=colors[i],alpha=0.9)\n",
@@ -204,6 +209,13 @@
     "# turn off axis panes\n",
     "fig.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
