added reverse integrability to index

--- a/docs/source/reverse_integrability.ipynb
+++ b/docs/source/reverse_integrability.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reverse integrability\n",
+    "\n",
+    "A good test of the integrator is first integrate our points backward, and then re-integrate them forward. If the integrator works properly, we should return to the current position only limited by precision from the time step size. This notebook shows the different between the positions of the globular clusters when integrated backwards as point masses and then integrated forward. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,11 +40,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_relative_stability(tBack,relativeR,relativaV,colors,rlabel,vlabel,title,timestep,\n",
+    "                            ylims=[1e-20,1e-9]):\n",
+    "    nGC=len(relativeR)\n",
+    "    fig,axis=plt.subplots(2,1,figsize=(12,8),sharex=True,gridspec_kw={'hspace':0})\n",
+    "    for i in range(nGC):\n",
+    "        axis[0].plot(tBack,relativeR[i],color=colors[i],alpha=0.5)\n",
+    "        axis[1].plot(tBack,relativaV[i],color=colors[i],alpha=0.5)\n",
+    "    for ax in axis:\n",
+    "        ax.set_yscale('log')\n",
+    "        ax.set_xlim(tBack[0],tBack[-1])\n",
+    "        ax.set_ylim(*ylims)\n",
+    "    axis[0].set_ylabel(rlabel,fontsize=25,rotation=0,labelpad=20)\n",
+    "    axis[1].set_ylabel(vlabel,fontsize=25,rotation=0,labelpad=20)\n",
+    "    axis[1].set_xlabel('Integration time [s kpc/ km]')\n",
+    "    y0ticks=axis[0].get_yticks()\n",
+    "    y1ticks=axis[1].get_yticks()\n",
+    "    axis[0].set_yticks(y0ticks[2:-1]);\n",
+    "    axis[1].set_yticks(y1ticks[1:-2]);\n",
+    "    axis[0].set_title(title)\n",
+    "    axis[0].text(0.95,0.95,'Difference between integrating backward and reintegrating forward',transform=axis[0].transAxes,ha='right',va='top')\n",
+    "    axis[0].text(0.95,0.15,\"Integration time step: {:.1e}\".format(timestep),transform=axis[0].transAxes,ha='right',va='top')\n",
+    "    return fig,axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_dr_dv_rmean_vmean(backwardOrbit,forwardOrbit):\n",
+    "    \"\"\"\n",
+    "    Calculate the difference in position and velocity between the backward and forward integration\n",
+    "    \"\"\"\n",
+    "\n",
     "    dx=backwardOrbit[1]-forwardOrbit[1]\n",
     "    dy=backwardOrbit[2]-forwardOrbit[2]\n",
     "    dz=backwardOrbit[3]-forwardOrbit[3]\n",
@@ -55,6 +98,9 @@
     "    return dr,dv,rmean,vmean\n",
     "\n",
     "def dynamical_time_sorter(x,y,z,vx,vy,vz):\n",
+    "    \"\"\"\n",
+    "        For making the plots prettier, sort the clusters by dynamical time.\n",
+    "    \"\"\"\n",
     "    # get an estimate of all dynamical times of the cluster\n",
     "    r0=np.sqrt(x**2+y**2+z**2)\n",
     "    v0=np.sqrt(vx**2+vy**2+vz**2)\n",
@@ -66,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,11 +130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_globular_clusters_in_galactic_coordinates(MWrefframe):\n",
+    "    \"\"\"Extract all initial conditions of the globular clusters and transform them the MW frame\"\"\"\n",
     "    unitT, unitV, unitD, unitM, unitG, G = loadunits()\n",
     "    GCdata  =   tstrippy.Parsers.baumgardtMWGCs().data\n",
     "    skycoordinates=coord.SkyCoord(\n",
@@ -106,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +180,9 @@
     "    tstrippy.integrator.deallocate()\n",
     "\n",
     "    #### Now compute the orbit forward\n",
+    "    #### IT'S VERY IMPORTANT TO USE tBackward[-1] AS THE CURRENT TIME FOR THE FORWARD INTEGRATION\n",
+    "    #### BEFORE I USED -integrationtime, WHICH CAN BE DIFFERENT BY NSTEP * 1e-16\n",
+    "    #### I.e. A DRIFT IN TIME DUE TO NUMERICAL ERROR, WHICH CAN BECOME SIGNIFICANT FOR INTEGRATING WITH THE BAR\n",
     "    currenttime=tBackward[-1]*unitT\n",
     "\n",
     "    integrationparameters=[currenttime.value,dt.value,Ntimestep]\n",
@@ -160,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,101 +218,43 @@
     "MWrefframe      = tstrippy.Parsers.potential_parameters.MWreferenceframe()  \n",
     "x,y,z,vx,vy,vz  = load_globular_clusters_in_galactic_coordinates(MWrefframe)\n",
     "staticgalaxy    = [\"pouliasis2017pii\", MWparams]\n",
-    "integrationtime =   5e9 * u.yr\n",
-    "timestep        =   1e5 * u.yr\n",
     "initialkinematics=[x,y,z,vx,vy,vz]\n",
-    "backwardOrbit,forwardOrbit=\\\n",
-    "    vanilla_clusters(integrationtime,timestep,staticgalaxy,initialkinematics)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dr,dv,rmean,vmean = get_dr_dv_rmean_vmean(backwardOrbit,forwardOrbit)\n",
-    "idx = dynamical_time_sorter(x,y,z,vx,vy,vz)\n",
-    "dr,dv,rmean,vmean = dr[idx],dv[idx],rmean[idx],vmean[idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib.colors import LogNorm\n",
+    "\n",
     "# get a unique color for each cluster based on the dynamical time\n",
-    "cmap = plt.get_cmap('rainbow')\n",
-    "colors = cmap(np.linspace(0, 1, len(Tdyn)))"
+    "cmap = plt.get_cmap('twilight')\n",
+    "nGC = len(x)\n",
+    "colors = cmap(np.linspace(0, 1, nGC))\n",
+    "integrationtime =   5e9 * u.yr\n",
+    "timesteps = [1e7*u.yr,1e6*u.yr,1e5*u.yr,1e4*u.yr]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 56,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "tBack = backwardOrbit[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "165"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nGC = len(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rlabel = r\"$\\frac{|d\\vec{r}|}{\\langle r \\rangle}$\""
+    "integrate with a series of different timesteps to show the stability of the cluster orbits"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'int' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[57], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m axis[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mset_ylabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdv [km/s]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m axis[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mset_xlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIntegration time [s kpc/ km]\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnGC\u001b[49m\u001b[43m)\u001b[49m):\n\u001b[1;32m      6\u001b[0m     axis[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mplot(tBack,dr[i],color\u001b[38;5;241m=\u001b[39mcolors[i],alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m)\n\u001b[1;32m      7\u001b[0m     axis[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mplot(tBack,dv[i],color\u001b[38;5;241m=\u001b[39mcolors[i],alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fig,axis=plt.subplots(2,1,figsize=(12,8),sharex=True)\n",
-    "axis[0].set_ylabel(rlabel)\n",
-    "axis[1].set_ylabel('dv [km/s]')\n",
-    "axis[1].set_xlabel('Integration time [s kpc/ km]')\n",
-    "for i in range(nGC):\n",
-    "    axis[0].plot(tBack,dr[i],color=colors[i],alpha=0.5)\n",
-    "    axis[1].plot(tBack,dv[i],color=colors[i],alpha=0.5)\n",
-    "for ax in axis:\n",
-    "    ax.set_yscale('log')"
+    "rlabel = r\"$\\frac{|\\delta\\vec{r}|}{\\langle r \\rangle}$\"\n",
+    "vlabel = r\"$\\frac{|\\delta\\vec{v}|}{\\langle v \\rangle}$\"\n",
+    "ylims = [1e-20,1e-4]\n",
+    "for timestep in timesteps:\n",
+    "    backwardOrbit,forwardOrbit=\\\n",
+    "        vanilla_clusters(integrationtime,timestep,staticgalaxy,initialkinematics)\n",
+    "    tBack = backwardOrbit[0]\n",
+    "    dr,dv,rmean,vmean = get_dr_dv_rmean_vmean(backwardOrbit,forwardOrbit)\n",
+    "    idx = dynamical_time_sorter(x,y,z,vx,vy,vz)\n",
+    "    dr,dv,rmean,vmean = dr[idx],dv[idx],rmean[idx],vmean[idx]\n",
+    "    relativeR = dr/rmean\n",
+    "    relativaV = dv/vmean\n",
+    "    title = r\"Vanilla integration stability of {:d} globular clusters in {:s} potential\".format(nGC,staticgalaxy[0])\n",
+    "    fig,axis=plot_relative_stability(tBack,relativeR,relativaV,colors,rlabel,vlabel,title,timestep,ylims=ylims)"
    ]
   }
  ],
