added more comments and titles

--- a/docs/source/reverse_integrability.ipynb
+++ b/docs/source/reverse_integrability.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sets the plot basics to be nice"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -40,12 +47,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_relative_stability(tBack,relativeR,relativaV,colors,rlabel,vlabel,title,timestep,\n",
     "                            ylims=[1e-20,1e-9]):\n",
+    "    \"\"\" Plot the relative stability of the integration of the orbits\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    tBack: array\n",
+    "        Array of the integration time in seconds\n",
+    "    relativeR: array\n",
+    "        Array of the relative difference in the position of the objects\n",
+    "    relativeV: array\n",
+    "        Array of the relative difference in the velocity of the objects\n",
+    "    colors: array\n",
+    "        Array of the colors of the objects\n",
+    "    rlabel: string\n",
+    "        Label of the y-axis of the position plot\n",
+    "    vlabel: string\n",
+    "        Label of the y-axis of the velocity plot\n",
+    "    title: string\n",
+    "        Title of the plot\n",
+    "    timestep: float\n",
+    "        Time step of the integration in years\n",
+    "    ylims: array\n",
+    "        Limits of the y-axis of the plots\n",
+    "    \n",
+    "    \"\"\"\n",
     "    nGC=len(relativeR)\n",
     "    fig,axis=plt.subplots(2,1,figsize=(12,8),sharex=True,gridspec_kw={'hspace':0})\n",
     "    for i in range(nGC):\n",
@@ -70,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +115,6 @@
     "    \"\"\"\n",
     "    Calculate the difference in position and velocity between the backward and forward integration\n",
     "    \"\"\"\n",
-    "\n",
     "    dx=backwardOrbit[1]-forwardOrbit[1]\n",
     "    dy=backwardOrbit[2]-forwardOrbit[2]\n",
     "    dz=backwardOrbit[3]-forwardOrbit[3]\n",
@@ -99,7 +135,7 @@
     "\n",
     "def dynamical_time_sorter(x,y,z,vx,vy,vz):\n",
     "    \"\"\"\n",
-    "        For making the plots prettier, sort the clusters by dynamical time.\n",
+    "        For making the plots prettier, sort the clusters by a crude estimate of the dynamical time.\n",
     "    \"\"\"\n",
     "    # get an estimate of all dynamical times of the cluster\n",
     "    r0=np.sqrt(x**2+y**2+z**2)\n",
@@ -206,6 +242,15 @@
     "    backwardOrbit  = [tBackward,xBackward,yBackward,zBackward,vxBackward,vyBackward,vzBackward]\n",
     "    forwardOrbit   = [tForward,xForward,yForward,zForward,vxForward,vyForward,vzForward]\n",
     "    return backwardOrbit,forwardOrbit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load\n",
+    "\n",
+    "Get the Milky Way potential parameters, reference frame, and globular cluster positions and masses"
    ]
   },
   {
