changed name for vanilla orbits

--- a/docs/source/reverse_integrability_vanilla.ipynb
+++ b/docs/source/reverse_integrability_vanilla.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reverse integrability\n",
+    "# Vanilla reverse integrability\n",
     "\n",
-    "A good test of the integrator is first integrate our points backward, and then re-integrate them forward. If the integrator works properly, we should return to the current position only limited by numerical precision from the time step size. This notebook shows the different between the positions of the globular clusters when integrated backwards as point masses and then integrated forward. "
+    "A good test of the integrator is first integrate our points backward, and then re-integrate them forward. If the integrator works properly, we should return to the current position only limited by numerical precision from the time step size. This notebook shows the different between the positions of the globular clusters when integrated backwards as point masses and then integrated forward. \n",
+    "\n",
+    "*Vanilla* in this experiment means the most basic case: integrating point masses in the time-static and axis-symmetric potential to represent the Milky Way"
    ]
   },
   {
