adding notebook to documentation

--- a/docs/source/bar_stream_example.ipynb
+++ b/docs/source/bar_stream_example.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stream with a bar \n",
+    "\n",
+    "This notebook has some quick code showing how to integrate a stream in a potential with a bar. It compares it to a case with no bar. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
